# pc-tidy

./: .gitignore  brand.py  config.yaml  monitor.py  notifier.py  pc-tidy.spec  pyproject.toml  rules.py  setup_scheduler.py  tidymon.spec  tray.py
.github/workflows/: release.yml
